styling the description part

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="description"></div>
-        <h1>hello</h1>
+        <div class="description">
+            <h3>Your result</h3>
+        </div>
+        <div class="summary"></div>
     </div>
     
 </body>
