--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
     <div class="container">
         <div class="description">
             <h3>Your result</h3>
+            <div class="circle">
+                <h1>76</h1>
+                <h3>of 100</h3>
+            </div>
+            <div class="result">
+                <h1>Great</h1>
+                <h3>You scored higher than 65% of the 
+                    people who have taken these tests.
+                </h3>
+            </div>
+            <div class="subtitle"></div>
         </div>
         <div class="summary"></div>
     </div>
