--- a/index.html
+++ b/index.html
@@ -29,9 +29,22 @@
                     people who have taken these tests.
                 </h3>
             </div>
-            <div class="subtitle"></div>
         </div>
-        <div class="summary"></div>
+        <div class="summary">
+            <h1>Summary</h1>
+            <div class="box">
+                <div class="reaction" id="box">
+
+                </div>
+                <div class="memory" id="box"></div>
+                <div class="verbal" id="box"></div>
+                <div class="visual" id="box"></div>
+            </div>
+            <div class="button">
+                <button>Continue</button>
+            </div>
+            
+        </div>
     </div>
     
 </body>
