desktop view completed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </div>
             <div class="result">
                 <h1>Great</h1>
-                <h3>You scored higher than 65% of the 
+                <h3>
+                    You scored higher than 65% of the 
                     people who have taken these tests.
                 </h3>
             </div>
@@ -34,16 +35,29 @@
             <h1>Summary</h1>
             <div class="box">
                 <div class="reaction" id="box">
-
+                    <img src="icon-reaction.svg" alt="">
+                    <h3>Reaction</h3>
+                    <p>80 <span>/ 100</span></p>
                 </div>
-                <div class="memory" id="box"></div>
-                <div class="verbal" id="box"></div>
-                <div class="visual" id="box"></div>
+                <div class="memory" id="box">
+                    <img src="icon-memory.svg">
+                    <h3>Memory</h3>
+                    <p>92 <span>/ 100</span></p>
+                </div>
+                <div class="verbal" id="box">
+                    <img src="icon-verbal.svg" alt="">
+                    <h3>Verbal</h3>
+                    <p>61 <span>/ 100</span></p>
+                </div>
+                <div class="visual" id="box">
+                    <img src="icon-visual.svg" alt="">
+                    <h3>Visual</h3>
+                    <p>72 <span>/ 100</span></p>
+                </div>
             </div>
             <div class="button">
                 <button>Continue</button>
             </div>
-            
         </div>
     </div>
     
